--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="../public/css/common-styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
 
@@ -74,6 +75,9 @@
                         <p class="admin-name">Admin User</p>
                         <p class="admin-email">admin@park.com</p>
                     </div>
+                    <div class="logout-button" id="logout-button">
+                        <i class="fas fa-sign-out-alt"></i>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -84,15 +88,21 @@
             <header class="dashboard-header">
                 <div class="header-content">
                     <div class="header-left">
-                        <h1>Dashboard</h1>
-                        <p>Real time parking lot management and monitoring</p>
+                        <div class="header-left-text">
+                            <h1>Dashboard</h1>
+                            <p>Real time parking lot management and monitoring</p>
+                        </div>
+                        <div class="logout-button-container ">
+                            <button class="logout-button" id="logout-button"> <i class="fa fa-sign-out-alt"></i>
+                                Logout</button>
+                        </div>
                     </div>
                     <div class="header-right">
-                        <select class="building-selector">
-                            <option value="thejaswini"><i class="fas fa-map-marker-alt"></i> building1
+                        <select class="building-selector" id="building-selector">
+                            <option value="building1"><i class="fas fa-map-marker-alt"></i> building1
                             </option>
                             <option value="building2"><i class="fas fa-map-marker-alt"></i> buildin2</option>
-                            <option value="building2"><i class="fas fa-map-marker-alt"></i> building3</option>
+                            <option value="building3"><i class="fas fa-map-marker-alt"></i> building3</option>
                         </select>
                         <div class="datetime">
                             <span class="date" id="current-date">15/09/2025</span>
@@ -100,7 +110,7 @@
                         </div>
                         <div class="user-menu">
                             <button class="user-avatar">
-                                <i class="fas fa-user"></i>
+                                <i class="fas fa-bell"></i>
                             </button>
                         </div>
                     </div>
@@ -122,7 +132,7 @@
                         </div>
                     </div>
 
-                    <div class="stat-card">
+                    <div class="stat-card available">
                         <div class="stat-icon available">
                             <i class="fas fa-car"></i>
                         </div>
@@ -140,7 +150,7 @@
                         </div>
                     </div>
 
-                    <div class="stat-card">
+                    <div class="stat-card occupied">
                         <div class="stat-icon occupied">
                             <i class="fas fa-car"></i>
                         </div>
@@ -158,7 +168,7 @@
                         </div>
                     </div>
 
-                    <div class="stat-card">
+                    <div class="stat-card reserved">
                         <div class="stat-icon reserved">
                             <i class="fas fa-car"></i>
                         </div>
@@ -176,7 +186,7 @@
                         </div>
                     </div>
 
-                    <div class="stat-card">
+                    <div class="stat-card named">
                         <div class="stat-icon named">
                             <i class="fas fa-car"></i>
                         </div>
@@ -214,18 +224,20 @@
                         <p>N slots with sensor or connectivity issues require immediate attention.</p>
                         <button class="alert-action sensor">View Details</button>
                     </div>
-                   
+
                 </div>
 
                 <!-- Charts and Alerts Row -->
                 <div class="dashboard-row">
                     <!-- Weekly Usage Chart -->
-                    <div class="chart-container">
-                        <div class="chart-header">
+                    <div class="weekly-overview-card">
+                        <div class="card-header">
                             <h3><i class="fas fa-chart-bar"></i> Weekly Usage Overview</h3>
                             <p>Average slots occupied by day - Friday shows highest demand</p>
                         </div>
-                        <canvas id="weeklyChart" width="300" height="50"></canvas>
+                        <div class="chart-container">
+                            <canvas id="weeklyChart"></canvas>
+                        </div>
                     </div>
 
                     <!-- Alerts and Insights -->
@@ -279,37 +291,53 @@
                         </div>
                     </div>
                 </div>
-
                 <!-- Parking Lot Overview -->
-                <div class="parking-overview">
+                <div class="parking-overview" id="parking-overview">
                     <div class="parking-header">
                         <h3>Parking Lot Overview</h3>
-                        <div class="parking-legend">
-                            <div class="legend-item">
-                                <span class="legend-color pillar"></span>
-                                Pillar
+                        <div class="legend-container">
+                            <div class="parking-legend">
+
+                                <div class="legend-item">
+                                    <span class="legend-color corner"></span>
+                                    Named
+                                </div>
+                                <div class="legend-item">
+                                    <span class="legend-color available"></span>
+                                    Available
+                                </div>
+                                <div class="legend-item">
+                                    <span class="legend-color occupied"></span>
+                                    Booked
+                                </div>
+                                <div class="legend-item">
+                                    <span class="legend-color reserved"></span>
+                                    Reserved
+                                </div>
+                                <div class="legend-item">
+                                    <span class="legend-color unbooked"></span>
+                                    Unbooked
+                                </div>
                             </div>
-                            <div class="legend-item">
-                                <span class="legend-color corner"></span>
-                                Corner
+
+                            <div class="parking-legend second-row">
+
+                                <div class="legend-item">
+                                    <img src="../public/assets/icons/pillar.png" class="pillar" alt="">
+                                    Pillar
+                                </div>
+                                <div class="legend-item">
+                                    <i class="fa fa-turn-down"></i>
+                                    Corner
+                                </div>
+                                <div class="legend-item">
+                                    <i class="fa fa-bolt available"></i>
+                                    EV Slot
+                                </div>
                             </div>
-                            <div class="legend-item">
-                                <span class="legend-color available"></span>
-                                Available
-                            </div>
-                            <div class="legend-item">
-                                <span class="legend-color occupied"></span>
-                                Occupied
-                            </div>
-                            <div class="legend-item">
-                                <span class="legend-color reserved"></span>
-                                Reserved
-                            </div>
-                            <div class="legend-item">
-                                <span class="legend-color unbooked"></span>
-                                Unbooked
-                            </div>
+
                         </div>
+
                     </div>
 
                     <!-- Level Tabs -->
@@ -365,7 +393,7 @@
                                     <span class="slot-id">A08</span>
                                     <i class="slot-icon fas fa-car"></i>
                                 </div>
-                                <div class="parking-slot reserved" data-slot="A09">
+                                <div class="parking-slot named" data-slot="A09">
                                     <span class="slot-id">A09</span>
                                     <i class="slot-icon fas fa-car"></i>
                                 </div>
