feat:except chart

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -153,7 +153,7 @@
                             <i class="fas fa-car"></i>
                         </div>
                         <div class="stat-content">
-                            <h3>Occupied</h3>
+                            <h3>In Use</h3>
                             <div class="stat-number">8 <span class="stat-total">/ 50</span></div>
                             <div class="stat-progress-container">
                                 <div class="stat-progress-bar">
@@ -189,7 +189,7 @@
                             <i class="fas fa-car"></i>
                         </div>
                         <div class="stat-content">
-                            <h3>Named</h3>
+                            <h3>DU Heads</h3>
                             <div class="stat-number">10 <span class="stat-total">/ 50</span></div>
                             <div class="stat-progress-container">
                                 <div class="stat-progress-bar">
@@ -296,7 +296,7 @@
                             
                             <div class="legend-item">
                                 <span class="legend-color corner"></span>
-                                Named
+                                DU Heads
                             </div>
                             <div class="legend-item">
                                 <span class="legend-color available"></span>
