fix:sidebar fixed

--- a/admin/sidebar.html
+++ b/admin/sidebar.html
@@ -5,13 +5,13 @@
     </div>
 
     <ul class="nav-menu">
-        <li class="nav-item">
+        <li class="nav-item active">
             <a href="dashboard.html" class="nav-link" data-section="dashboard">
                 <i class="nav-icon fas fa-th-large"></i>
                 Dashboard
             </a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item ">
             <a href="bookings.html" class="nav-link" data-section="bookings">
                 <i class="nav-icon fas fa-calendar-alt"></i>
                 Bookings
@@ -24,7 +24,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link" data-section="vehicle-management">
+            <a href="vehicle-management.html" class="nav-link" data-section="vehicle-management">
                 <i class="nav-icon fas fa-car"></i>
                 Vehicle Management
             </a>
@@ -59,7 +59,7 @@
                 <p class="admin-email">admin@park.com</p>
             </div>
             <div class="logout-button" id="logout-button">
-                        <i class="fas fa-sign-out-alt"></i>
+                <i class="fas fa-sign-out-alt"></i>
             </div>
         </div>
     </div>
