--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link" data-section="vehicle-management">
+                    <a href="vehicle-management.html" class="nav-link" data-section="vehicle-management">
                         <i class="nav-icon fas fa-car"></i>
                         Vehicle Management
                     </a>
