--- a/admin/report-index.html
+++ b/admin/report-index.html
@@ -18,7 +18,7 @@
       </div>
 
       <ul class="nav-menu">
-        <li class="nav-item"><a href="#" class="nav-link"><i class="nav-icon fas fa-th-large"></i> Dashboard</a></li>
+        <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="nav-icon fas fa-th-large"></i> Dashboard</a></li>
         <li class="nav-item"><a href="#" class="nav-link"><i class="nav-icon fas fa-calendar-alt"></i> Bookings</a></li>
         <li class="nav-item active"><a href="report-index.html" class="nav-link"><i class="nav-icon fas fa-file-alt"></i> Reports</a></li>
         <li class="nav-item"><a href="#" class="nav-link"><i class="nav-icon fas fa-car"></i> Vehicle Management</a></li>
@@ -58,15 +58,15 @@
     <canvas id="usageTrendsChart"></canvas>
   </section>
 
-  <section id="pdfViewerSection" class="pdf-viewer-container" style="display:none;">
-    <h2>PDF Preview</h2>
-    <iframe id="pdfViewer" class="pdf-viewer" width="100%" height="600px" frameborder="0"></iframe>
-    <div class="pdf-actions">
-        <button id="downloadPdfBtn" class="pdf-btn">
-            <i class="fas fa-download"></i> Download PDF
-        </button>
-    </div>
-  </section>
+<section id="pdfViewerSection" class="pdf-viewer-card" style="display:none;">
+  <div class="pdf-viewer-header">
+    <h2><i class="fas fa-file-pdf"></i> PDF Preview</h2>
+    <button id="downloadPdfBtn" class="pdf-btn">
+      <i class="fas fa-download"></i> Download PDF
+    </button>
+  </div>
+  <iframe id="pdfViewer" class="pdf-viewer" width="100%" height="600px" frameborder="0"></iframe>
+</section>
 </main>
   </div>
 
