--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -103,18 +103,23 @@
                     <div class="filters-container">
                         <input class="search-bar" type="search"
                             placeholder="Search" aria-label="Search">
-                        <div class="btn-dropdown">
-                            <span>Status</span>
-                            <i class="fas fa-chevron-down"></i>
+                        <div>
+                            <label for="statusFilter">Status:</label>
+                            <select id="statusFilter">
+                                <option value="">All Status</option>
+                                <option value="Confirmed">Confirmed</option>
+                                <option value="Cancelled">Cancelled</option>
+                                <option value="Completed">Completed</option>
+                            </select>
                         </div>
-                        <div class="btn-dropdown">
-                            <span>Date</span>
-                            <i class="fas fa-chevron-down"></i>
+                        <div>
+                            <label for="dateFilter">Date:</label>
+                            <input type="date" id="dateFilter" class="date-filter">
                         </div>
 
                         <div class="button-container">
                             <button class="btn-primary">
-                                <i class="fas fa-plus"></i>Book Slot
+                                <i class="fas fa-plus"></i>Reserve Slot
                             </button>
                         </div>
                     </div>
@@ -126,6 +131,7 @@
                                 <th>Booking ID</th>
                                 <th>Vehicle Number</th>
                                 <th>Employee</th>
+                                <th>Building</th>
                                 <th>Slot Number</th>
                                 <th>Status</th>
                                 <th>Date and Time</th>
@@ -133,141 +139,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK001</td>
-                                <td>ABC123</td>
-                                <td>John Doe</td>
-                                <td>A-101</td>
-                                <td>Booked</td>
-                                <td>2025-09-17 10:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK002</td>
-                                <td>XYZ456</td>
-                                <td>Jane Smith</td>
-                                <td>B-202</td>
-                                <td>Cancelled</td>
-                                <td>2025-09-16 02:00 PM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
-                            <tr>
-                                <td>#BK003</td>
-                                <td>LMN789</td>
-                                <td>Robert Brown</td>
-                                <td>C-303</td>
-                                <td>Pending</td>
-                                <td>2025-09-15 09:00 AM</td>
-                                <td><button class="btn-action">View</button></td>
-                            </tr>
+                            <!-- Bookings will be dynamically populated here -->
                         </tbody>
                     </table>
                 </div>
