--- a/admin/vehicle_management.html
+++ b/admin/vehicle_management.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="user-menu">
                             <button class="user-avatar">
-                                <i class="fas fa-user"></i>
+                                <i class="fas fa-bell"></i>
                             </button>
                         </div>
                     </div>
