--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -81,16 +81,36 @@
             </div>
         </nav>
         <div class="main-content">
-            <header class="dashboard-header">
+            <header class="main-header">
                 <div class="header-content">
-
                     <div class="header-left">
-                        <h2>Bookings</h2>
+                        <div class="header-left-text">
+                            <div class="header-left-text">
+                                <h1>Page-name</h1>
+                                <p>Optional tagline</p>
+                            </div>
+                        </div>
+                        <div class="logout-button-container ">
+                            <button class="logout-button" id="logout-button"> <i class="fa fa-sign-out-alt"></i>
+                                Logout</button>
+                        </div>
                     </div>
                     <div class="header-right">
-                        <img src="../public/assets/images/notification.png" alt="Notifications"
-                            class="notification-icon">
-
+                        <select class="building-selector" id="building-selector">
+                            <option value="building1"><i class="fas fa-map-marker-alt"></i> building1
+                            </option>
+                            <option value="building2"><i class="fas fa-map-marker-alt"></i> buildin2</option>
+                            <option value="building3"><i class="fas fa-map-marker-alt"></i> building3</option>
+                        </select>
+                        <div class="datetime">
+                            <span class="date" id="current-date">15/09/2025</span>
+                            <span class="time" id="current-time">11:14:25</span>
+                        </div>
+                        <div class="user-menu">
+                            <button class="user-avatar">
+                                <i class="fas fa-bell"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -101,8 +121,7 @@
                         <h4>All Booking(9)</h4>
                     </div>
                     <div class="filters-container">
-                        <input class="search-bar" type="search"
-                            placeholder="Search" aria-label="Search">
+                        <input class="search-bar" type="search" placeholder="Search" aria-label="Search">
                         <div>
                             <label for="statusFilter">Status:</label>
                             <select id="statusFilter">
