fix: fixing the common header part 1

--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -86,8 +86,8 @@
                     <div class="header-left">
                         <div class="header-left-text">
                             <div class="header-left-text">
-                                <h1>Page-name</h1>
-                                <p>Optional tagline</p>
+                                <h1>Bookings</h1>
+                                <p>Manage your bookings efficiently</p>
                             </div>
                         </div>
                         <div class="logout-button-container ">
@@ -166,6 +166,7 @@
         </div>
     </div>
     <script type="module" src="../admin/js/bookings.js"></script>
+    <script src="../public/js/headerScript.js"></script>
 </body>
 
 </html>
