--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -97,10 +97,10 @@
                     </div>
                     <div class="header-right">
                         <select class="building-selector" id="building-selector">
-                            <option value="building1"><i class="fas fa-map-marker-alt"></i> building1
+                            <option value="building1"><i class="fas fa-map-marker-alt"></i> Athulya, Kochi
                             </option>
-                            <option value="building2"><i class="fas fa-map-marker-alt"></i> buildin2</option>
-                            <option value="building3"><i class="fas fa-map-marker-alt"></i> building3</option>
+                            <option value="building2"><i class="fas fa-map-marker-alt"></i> Gayathri, Trivandrum</option>
+                            <option value="building3"><i class="fas fa-map-marker-alt"></i> Thejaswini, Trivandrum</option>
                         </select>
                         <div class="datetime">
                             <span class="date" id="current-date">15/09/2025</span>
