--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -8,13 +8,22 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/chatbot.css" />
   </head>
   <body>
-    <div class="chat-container">
+    <div id="loadingScreen" class="loading-screen">
+      <div class="loader"></div>
+      <p>Loading...</p>
+    </div>
+
+    <div id="chatInterface" class="chat-container" style="display: none">
       <div class="header">
         <div class="logo">
-            <svg
+          <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
             height="24"
@@ -24,24 +33,16 @@
             stroke-width="2"
             stroke-linecap="round"
             stroke-linejoin="round"
-            class="lucide lucide-bot w-6 h-6"
-            data-lov-id="src/components/Chatbot.tsx:413:10"
-            data-lov-name="Bot"
-            data-component-path="src/components/Chatbot.tsx"
-            data-component-line="413"
-            data-component-file="Chatbot.tsx"
-            data-component-name="Bot"
-            data-component-content="%7B%22className%22%3A%22w-6%20h-6%22%7D"
-            >
-            <path d="M12 8V4H8"></path>
-            <rect width="16" height="12" x="4" y="8" rx="2"></rect>
-            <path d="M2 14h2"></path>
-            <path d="M20 14h2"></path>
-            <path d="M15 13v2"></path>
-            <path d="M9 13v2"></path>
-            </svg>
+          >
+            <rect x="3" y="3" width="18" height="18" rx="2" />
+            <path d="M9 17V7h4a3 3 0 0 1 0 6h-4" />
+            <line x1="9" y1="13" x2="13" y2="13" />
+          </svg>
         </div>
         ParkNex Assistant
+        <button id="logoutBtn" class="logout-btn" title="Logout">
+          <i class="fas fa-sign-out-alt"></i>
+        </button>
       </div>
       <div class="messages" id="messages"></div>
       <div class="input-box">
@@ -50,6 +51,10 @@
       </div>
     </div>
 
+    <script
+      src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"
+      type="module"
+    ></script>
     <script src="js/chatbot-ui.js" type="module"></script>
   </body>
 </html>
