mimicked the structure of dev

--- a/admin/notifications.html
+++ b/admin/notifications.html
@@ -39,7 +39,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="reports.html" class="nav-link" data-section="reports">
+                    <a href="report-index.html" class="nav-link" data-section="reports">
                         <i class="nav-icon fas fa-file-alt"></i> Reports
                     </a>
                 </li>
