--- a/admin/notifications.html
+++ b/admin/notifications.html
@@ -55,7 +55,10 @@
                 </li>
                 <li class="nav-item active">
                     <a href="notifications.html" class="nav-link" data-section="notifications">
-                        <i class="nav-icon fas fa-bell"></i> Notifications
+                        <i class="nav-icon fas fa-bell"></i>
+                        <span>Notifications</span>
+                        <!-- ADD THIS SPAN FOR THE BADGE -->
+                        <span class="notification-badge"></span>
                     </a>
                 </li>
                 <li class="nav-item">
