before pre-test

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -134,7 +134,7 @@
                         </div>
                         <div class="stat-content">
                             <h3>Total Slots</h3>
-                            <div class="stat-number">50</div>
+                            <div class="stat-number"><span class="loading-text">Loading...</span> </div>
                         </div>
                     </div>
  
@@ -144,15 +144,14 @@
                         </div>
                         <div class="stat-content">
                             <h3>Available</h3>
-                            <div class="stat-number">8 <span class="stat-total">/ 50</span></div>
+                            <div class="stat-number"><span class="loading-text">Loading...</span> <span class="stat-total"></span></div>
                             <div class="stat-progress-container">
                                 <div class="stat-progress-bar">
-                                    <div class="stat-progress-fill" style="width: 16%"></div>
+                                    <div class="stat-progress-fill" style="width: 0%"></div>
                                 </div>
-                                <div class="stat-percentage">16%</div>
+                                <div class="stat-percentage"></div>
  
                             </div>
-                            <div class="stat-change positive">+5% from last week</div>
                         </div>
                     </div>
  
@@ -162,15 +161,14 @@
                         </div>
                         <div class="stat-content">
                             <h3>In Use</h3>
-                            <div class="stat-number">8 <span class="stat-total">/ 50</span></div>
+                            <div class="stat-number"><span class="loading-text">Loading...</span>  <span class="stat-total"></span></div>
                             <div class="stat-progress-container">
                                 <div class="stat-progress-bar">
-                                    <div class="stat-progress-fill" style="width: 16%"></div>
+                                    <div class="stat-progress-fill" style="width: 0%"></div>
                                 </div>
-                                <div class="stat-percentage">16%</div>
+                                <div class="stat-percentage"></div>
  
                             </div>
-                            <div class="stat-change negative">2% from last week</div>
                         </div>
                     </div>
  
@@ -180,15 +178,14 @@
                         </div>
                         <div class="stat-content">
                             <h3>Pre-Booked</h3>
-                            <div class="stat-number">10 <span class="stat-total">/ 50</span></div>
+                            <div class="stat-number"><span class="loading-text">Loading...</span> <span class="stat-total"></span></div>
                             <div class="stat-progress-container">
                                 <div class="stat-progress-bar">
-                                    <div class="stat-progress-fill" style="width: 16%"></div>
+                                    <div class="stat-progress-fill" style="width: 0%"></div>
                                 </div>
-                                <div class="stat-percentage">16%</div>
+                                <div class="stat-percentage"></div>
  
                             </div>
-                            <div class="stat-change negative">2% from last week</div>
                         </div>
                     </div>
  
@@ -198,12 +195,12 @@
                         </div>
                         <div class="stat-content">
                             <h3>Named Slots</h3>
-                            <div class="stat-number">10 <span class="stat-total">/ 50</span></div>
+                            <div class="stat-number"><span class="loading-text">Loading...</span>  <span class="stat-total"></span></div>
                             <div class="stat-progress-container">
                                 <div class="stat-progress-bar">
-                                    <div class="stat-progress-fill" style="width: 16%"></div>
+                                    <div class="stat-progress-fill" style="width: 0%"></div>
                                 </div>
-                                <div class="stat-percentage">16%</div>
+                                <div class="stat-percentage"></div>
  
                             </div>
                         </div>
