--- a/admin/sidebar.html
+++ b/admin/sidebar.html
@@ -24,7 +24,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a href="vehicle-management.html" class="nav-link" data-section="vehicle-management">
+            <a href="vehicle_management.html" class="nav-link" data-section="vehicle-management">
                 <i class="nav-icon fas fa-car"></i>
                 Vehicle Management
             </a>
