--- a/admin/notifications.html
+++ b/admin/notifications.html
@@ -88,7 +88,7 @@
                 <div class="header-actions">
                     <a href="#" id="mark-all-read-btn" class="header-action-link"><i class="fas fa-check"></i> Mark All
                         Read</a>
-                    <a href="#" class="header-action-link"><i class="fas fa-cog"></i> Alert Settings</a>
+                    <!-- <a href="#" class="header-action-link"><i class="fas fa-cog"></i> Alert Settings</a> -->
                 </div>
             </header>
 
