--- a/admin/report-index.html
+++ b/admin/report-index.html
@@ -110,8 +110,8 @@
           </div>
         </div>
       </header>
-
-      <section class="usage-trends">
+      <div class="report-container">
+        <section class="usage-trends">
         <div class="usage-header-flex">
           <h2>Usage Trends Analytics</h2>
           <button id="generatePdfBtn" class="pdf-btn">
@@ -126,6 +126,8 @@
         </select>
         <canvas id="usageTrendsChart"></canvas>
       </section>
+      </div>
+      
 
       <section id="pdfViewerSection" class="pdf-viewer-card" style="display:none;">
         <div class="pdf-viewer-header">
