--- a/admin/vehicle_management.html
+++ b/admin/vehicle_management.html
@@ -91,11 +91,14 @@
 
         <!-- Main Content -->
         <main class="main-content">
-            <header class="dashboard-header">
+            <header class="main-header">
                 <div class="header-content">
                     <div class="header-left">
-                        <h1>Vehicle Management</h1>
+                        <div class="header-left-text">
+                            <h1>Vehicle Management</h1>
                         <p>Employee and vehicle records</p>
+                        </div>
+                        
                     </div>
                     <div class="header-right">
                         <div class="datetime">
