added styling to loading

--- a/admin/slot-management.html
+++ b/admin/slot-management.html
@@ -253,7 +253,7 @@
 
             <!-- Parking Grid -->
             <div class="parking-grid" id="parking-grid">
-              <div>Loading Slots...</div>
+              <div class="grid-loading">Loading....</div>
             </div>
           </div>
         </div>
