--- a/admin/report-index.html
+++ b/admin/report-index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/report-style.css">
   <link rel="stylesheet" href="../public/css/common-styles.css">
+  <link rel="stylesheet" href="css/realtime-alert.css">
+
 
 </head>
 
@@ -112,22 +114,22 @@
       </header>
       <div class="report-container">
         <section class="usage-trends">
-        <div class="usage-header-flex">
-          <h2>Usage Trends Analytics</h2>
-          <button id="generatePdfBtn" class="pdf-btn">
-            <i class="fas fa-file-pdf"></i> Generate PDF
-          </button>
-        </div>
-        <label for="buildingSelect">Select Building:</label>
-        <select id="buildingSelect">
-          <option value="Thejaswini">Thejaswini</option>
-          <option value="Gayathri">Gayathri</option>
-          <option value="Athulya">Athulya</option>
-        </select>
-        <canvas id="usageTrendsChart"></canvas>
-      </section>
+          <div class="usage-header-flex">
+            <h2>Usage Trends Analytics</h2>
+            <button id="generatePdfBtn" class="pdf-btn">
+              <i class="fas fa-file-pdf"></i> Generate PDF
+            </button>
+          </div>
+          <label for="buildingSelect">Select Building:</label>
+          <select id="buildingSelect">
+            <option value="Thejaswini">Thejaswini</option>
+            <option value="Gayathri">Gayathri</option>
+            <option value="Athulya">Athulya</option>
+          </select>
+          <canvas id="usageTrendsChart"></canvas>
+        </section>
       </div>
-      
+
 
       <section id="pdfViewerSection" class="pdf-viewer-card" style="display:none;">
         <div class="pdf-viewer-header">
@@ -144,6 +146,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script type="module" src="js/report-script.js"></script>
   <script src="../public/js/headerScript.js"></script>
+  <script type="module" src="js/realtime-alerts.js"></script>
+
 </body>
 
 </html>
