changed some styling

--- a/admin/slot-management.html
+++ b/admin/slot-management.html
@@ -329,7 +329,7 @@
                 </select>
               </div>
 
-              <div class="form-group">
+              <div class="form-group" id="slotGroup">
                 <label class="form-label">
                   Initial Status <span class="required">*</span>
                 </label>
@@ -341,7 +341,7 @@
                   <option value="Named">Named</option>
                 </select>
               </div>
-              <div class="form-group">
+              <div class="form-group" id="slotGroup">
                 <label class="form-label">Is Special</label>
                 <select class="form-select" id="slotIsSpecial">
                   <option value="no" selected>No</option>
@@ -479,19 +479,19 @@
                 </select>
               </div>
 
-              <div class="form-group">
+              <div class="form-group" id="configSlotGroup">
                 <label class="form-label">
                   Initial Status <span class="required">*</span>
                 </label>
                 <select class="filter-select" id="configSlotStatus" required>
-                  <option value="Available">Available</option>
-                  <option value="Occupied">Occupied</option>
+                  <option value="Fgoree">Available</option>
+                  <option value="Booked">Occupied</option>
                   <option value="Reserved">Reserved</option>
                   <option value="Unbooked">Unbooked</option>
                   <option value="Named">Named</option>
                 </select>
               </div>
-              <div class="form-group">
+              <div class="form-group" id="configSlotGroup">
                 <label class="form-label">Is Special</label>
                 <select class="form-select" id="configSlotIsSpecial">
                   <option value="no" selected>No</option>
