fix:bugs resolved

--- a/admin/bookings.html
+++ b/admin/bookings.html
@@ -96,12 +96,12 @@
                         </div>
                     </div>
                     <div class="header-right">
-                        <select class="building-selector" id="building-selector">
+                        <!-- <select class="building-selector" id="building-selector">
                             <option value="building1"><i class="fas fa-map-marker-alt"></i> Athulya, Kochi
                             </option>
                             <option value="building2"><i class="fas fa-map-marker-alt"></i> Gayathri, Trivandrum</option>
                             <option value="building3"><i class="fas fa-map-marker-alt"></i> Thejaswini, Trivandrum</option>
-                        </select>
+                        </select> -->
                         <div class="datetime">
                             <span class="date" id="current-date">15/09/2025</span>
                             <span class="time" id="current-time">11:14:25</span>
@@ -118,7 +118,7 @@
 
                 <div class="sub-heading-container">
                     <div class="sub-heading-top">
-                        <h4>All Booking(9)</h4>
+                        <h4>All Bookings</h4>
                     </div>
                     <div class="filters-container">
                         <input class="search-bar" type="search" placeholder="Search" aria-label="Search">
