--- a/admin/slot-management.html
+++ b/admin/slot-management.html
@@ -542,5 +542,7 @@
     </div>
     <script type="module" src="./js/slot-management.js"></script>
     <script src="../public/js/headerScript.js"></script>
+    <script type="module" src="js/realtime-alerts.js"></script>
+      <script type="module" src="js/auth.js"></script>
   </body>
 </html>
